adding lint rules

--- a/packages/web-components/fast-components/.eslintrc.json
+++ b/packages/web-components/fast-components/.eslintrc.json
@@ -1,3 +1,9 @@
-module.exports = {
-    extends: ["@microsoft/eslint-config-fast-dna", "prettier"],
-};
+ {
+    "extends": ["@microsoft/eslint-config-fast-dna", "prettier"],
+    "rules": {
+        "import/extensions": [
+            "error",
+            "always"
+        ]
+    }
+}
